trunk/Archive2/e4/b795207e561f79/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:56:1: error: expected unqualified-id before ‘}’ token
 }
 ^
main.cpp:56:1: error: expected ‘;’ before ‘}’ token
